@@ -1,26 +1,11 @@
-/*******************************************************************************
- * SWIG Java module
- * Author: Harco de Hilster
- *	   AT Consultancy
- *	   Toernooiveld 104
- *	   P.O. Box 1428
- *	   6501 BK Nijmegen
- *	   +31 24 3527282
- *	   harcoh@ATConsultancy.nl
- * Additions and modifications by William Fulton <wfulton1@email.mot.com>
+/* -----------------------------------------------------------------------------
+ * java.cxx
  *
- * thanks to the following persons for submitting bug-reports:
+ *     Java wrapper module.
  *
- *	James Hicks <jamey@crl.dec.com>
- *    	Lars Schmidt-Thieme <lschmidt@ix.urz.uni-heidelberg.de>
- *	Per OEyvind Hvidsten Per-Oyvind.Hvidsten@ffi.no
- *	Geoff Dillon <gdillon@pervasive.com>
- *    	Michael Haller <haller@lionbio.co.uk>
- *    	"Simon J. Julier" <sjulier@erols.com>
- *      "Pritam Kamat" <pritam@alier.com>
- *      Marc Hadley <marc_hadley@chrystal.co.uk>
- *******************************************************************************
-*/
+ * Copyright (C) 1999-2000.  The University of Chicago
+ * See the file LICENSE for information on usage and redistribution.
+ * ----------------------------------------------------------------------------- */
 
 #include <ctype.h>
 
@@ -36,10 +21,10 @@ Java Options\n\
      -module name     - set name of module\n\
      -package name    - set name of package\n\
      -shadow          - enable shadow classes\n\
-     -finalize        - generate finalize methods\n\
+     -nofinalize      - do not generate finalize methods in shadow classes\n\
      -rn              - generate register natives code\n\n";
 
-static char         *module = 0;          // Name of the module
+static  char         *module = 0;          // Name of the module
 static  char         *java_path = (char*)"java";
 static  char         *package = 0;         // Name of the package
 static  char         *c_pkgstr;         // Name of the package
@@ -63,7 +48,7 @@ static  int          static_flag = 0; // Set to 1 when wrapping a static functio
 static  int          variable_wrapper_flag = 0; // Set to 1 when wrapping a member variable
 static  int          wrapping_member = 0; // Set to 1 when wrapping a member variable/enum/const
 static  int          jnic = -1;          // 1: use c syntax jni; 0: use c++ syntax jni
-static  int          finalize = 0;          // generate finalize methods
+static  int          nofinalize = 0;          // for generating finalize methods
 static  int          useRegisterNatives = 0;        // Set to 1 when doing stuff with register natives
 static  String      *registerNativesList = 0;
 static  String      *shadow_enum_code;
@@ -395,9 +380,9 @@ void JAVA::parse_args(int argc, char *argv[]) {
       } else if (strcmp(argv[i],"-jnic") == 0) {
 	    Swig_mark_arg(i);
         jnic = 1;
-      } else if (strcmp(argv[i],"-finalize") == 0) {
+      } else if (strcmp(argv[i],"-nofinalize") == 0) {
 	    Swig_mark_arg(i);
-        finalize = 1;
+        nofinalize = 1;
       } else if (strcmp(argv[i],"-rn") == 0) {
 	    Swig_mark_arg(i);
         useRegisterNatives = 1;
@@ -531,9 +516,21 @@ void JAVA::initialize()
   }
 }
 
+void emit_banner(FILE *f) {
+  Printf(f, "/* ----------------------------------------------------------------------------\n");
+  Printf(f, " * This file was automatically generated by SWIG (http://www.swig.org).\n");
+  Printf(f, " * Version: %s\n", SWIG_VERSION);
+  Printf(f, " *\n");
+  Printf(f, " * Do not make changes to this file unless you know what you are doing--modify\n");
+  Printf(f, " * the SWIG interface file instead.\n");
+  Printf(f, " * ----------------------------------------------------------------------------- */\n\n");
+}
+
 void JAVA::emit_classdef() {
-  if(!classdef_emitted)
+  if(!classdef_emitted) {
+    emit_banner(f_java);
     Printf(f_java, "public class %s {\n", module);
+  }
   classdef_emitted = 1;
 }
 
@@ -1071,26 +1068,6 @@ void JAVA::declare_const(char *name, char *iname, SwigType *type, char *value) {
   Status = OldStatus;
 }
 
-void emit_shadow_banner(FILE *f) {
-  Printf(f, "/*\n");
-  Printf(f, " *\n");
-  Printf(f, " * This file was automatically generated by :\n");
-  Printf(f, " * Simplified Wrapper and Interface Generator (SWIG)\n");
-  Printf(f, " * Version: %s\n", SWIG_VERSION);
-  Printf(f, " *\n");
-  Printf(f, " * Portions Copyright (c) 1995-1997\n");
-  Printf(f, " * The University of Utah and The Regents of the University of California.\n");
-  Printf(f, " * Permission is granted to distribute this file in any manner provided\n");
-  Printf(f, " * this notice remains intact.\n");
-  Printf(f, " *\n");
-  Printf(f, " * Portions Copyright (c) 1997-1999\n");
-  Printf(f, " * Harco de Hilster, Harco.de.Hilster@ATConsultancy.nl\n");
-  Printf(f, " *\n");
-  Printf(f, " * Do not make changes to this file--changes will be lost!\n");
-  Printf(f, " *\n");
-  Printf(f, " */\n\n\n");
-}
-
 void JAVA::pragma(char *lang, char *code, char *value) {
   if(strcmp(lang, "java") != 0) return;
 
@@ -1158,7 +1135,7 @@ void JAVA::cpp_open_class(char *classname, char *rename, char *ctype, int strip)
     Printf(stderr, "Unable to create shadow class file: %s\n", bigbuf);
   }
 
-  emit_shadow_banner(f_shadow);
+  emit_banner(f_shadow);
 
   if(*package)
 	Printf(f_shadow, "package %s;\n\n", package);
@@ -1178,21 +1155,23 @@ void JAVA::emit_shadow_classdef() {
   if(*shadow_baseclass) {
     sprintf(bigbuf, "extends %s", shadow_baseclass);
     Replace(shadow_classdef,"%BASECLASS%", bigbuf, DOH_REPLACE_ANY);
-    Printv(shadow_classdef, "  public ", shadow_classname, "(java.lang.Long obj) {\n", tab4, "_self = obj.longValue();\n  }\n\n", 0);
   } else {
     Replace(shadow_classdef,"%BASECLASS%", "",DOH_REPLACE_ANY);
-
-    Printv(shadow_classdef,
-	   "  public long _self = 0;\n",
-       "  public boolean _selfown = false;\n\n",
-       "  public static ", shadow_classname, " newInstance(long p) {\n",
-	   "    return new ", shadow_classname, "(new Long(p));\n",
-	   "  };\n\n",
-
-       "  public ", shadow_classname, "(java.lang.Long obj) {\n", tab4, "_self = obj.longValue();\n  }\n\n",
-       0);
   }
-  Printv(shadow_classdef, "  public Class _selfClass() {\n", tab4, "return ", shadow_classname, ".class;\n", "  };\n\n", 0);
+  Printv(shadow_classdef,
+    "  private long _cPtr = 0;\n",
+    "  private boolean _cMemOwn = false;\n",
+    "\n",
+    "  public $class(long cPointer, boolean cMemoryOwn) {\n",
+    "    _cPtr = cPointer;\n",
+    "    _cMemOwn = cMemoryOwn;\n",
+    "  }\n",
+    "\n",
+    "  public long getCPtr() {\n",
+    "    return _cPtr;\n",
+    "  };\n",
+    "\n", 0);
+  Replace(shadow_classdef, "$class", shadow_classname, DOH_REPLACE_ANY);
 
   Printv(f_shadow, shadow_classdef,0);
   shadow_classdef_emitted = 1;
@@ -1267,13 +1246,13 @@ void JAVA::cpp_func(char *iname, SwigType *t, ParmList *l, String* java_function
       Printf(nativecall,"return ");
       /* If java wrapped object create new reference to it using new Long(...) */
       if (is_shadow(t))
-          Printv(nativecall, shadowrettype, ".newInstance(", 0);
+          Printv(nativecall, "new ", shadowrettype, "(", 0);
     }
   }
 
   Printv(nativecall, module, ".", java_function_name, "(", 0);
   if (!static_flag)
-    Printv(nativecall, "_self", 0);
+    Printv(nativecall, "_cPtr", 0);
 
   int pcount = ParmList_len(l);
 
@@ -1301,12 +1280,12 @@ void JAVA::cpp_func(char *iname, SwigType *t, ParmList *l, String* java_function
       /* handle parameters that are arrays of structures/classes */
         Printv(user_arrays, tab4, "long[] $arg_cArray = new long[$arg.length];\n", 0);
         Printv(user_arrays, tab4, "for (int i=0; i<$arg.length; i++)\n", 0);
-        Printv(user_arrays, tab4, "  $arg_cArray[i] = $arg[i]._self;\n", 0);
+        Printv(user_arrays, tab4, "  $arg_cArray[i] = $arg[i].getCPtr();\n", 0);
         Replace(user_arrays, "$arg", pn, DOH_REPLACE_ANY);
 
         Printv(nativecall, arg, "_cArray", 0);
       } else if (is_shadow(pt)) {
-        Printv(nativecall, arg, "._self", 0);
+        Printv(nativecall, arg, ".getCPtr()", 0);
       } else Printv(nativecall, arg, 0);
 
       /* Get the java type of the parameter */
@@ -1330,7 +1309,7 @@ void JAVA::cpp_func(char *iname, SwigType *t, ParmList *l, String* java_function
     Printf(array_ret,");\n");
     Printv(array_ret, tab4, "$type[] arrayWrapper = new $type[cArray.length];\n", 0);
     Printv(array_ret, tab4, "for (int i=0; i<cArray.length; i++)\n", 0);
-    Printv(array_ret, tab4, "  arrayWrapper[i] = $type.newInstance(cArray[i]);\n", 0);
+    Printv(array_ret, tab4, "  arrayWrapper[i] = new $type(cArray[i], false);\n", 0);
     Printv(array_ret, tab4, "return arrayWrapper;\n", 0);
 
     SwigToJavaType(array_type, iname, user_return_type, shadow);
@@ -1341,7 +1320,7 @@ void JAVA::cpp_func(char *iname, SwigType *t, ParmList *l, String* java_function
   }
   else {
     if((SwigType_type(t) != T_VOID) && is_shadow(t))
-      Printf(nativecall, ")");
+      Printf(nativecall, "), false");
     Printf(nativecall,");\n");
   }
 
@@ -1365,11 +1344,11 @@ void JAVA::cpp_constructor(char *name, char *iname, ParmList *l) {
 
   Printf(f_shadow, "  public %s(", shadow_classname);
 
-  Printv(nativecall, "    if(_self == 0 && ", shadow_classname, ".class == _selfClass()) {\n", 0);
+  Printv(nativecall, "    if(_cPtr == 0 && getCPtr() == 0) {\n", 0);
   if (iname != NULL)
-    Printv(nativecall, tab8, " _self = ", module, ".", Swig_name_construct(iname), "(", 0);
+    Printv(nativecall, tab8, " _cPtr = ", module, ".", Swig_name_construct(iname), "(", 0);
   else
-    Printv(nativecall, tab8, " _self = ", module, ".", Swig_name_construct(shadow_classname), "(", 0);
+    Printv(nativecall, tab8, " _cPtr = ", module, ".", Swig_name_construct(shadow_classname), "(", 0);
 
   int pcount = ParmList_len(l);
   if(pcount == 0)  // We must have a default constructor
@@ -1390,7 +1369,7 @@ void JAVA::cpp_constructor(char *name, char *iname, ParmList *l) {
     }
 
     if(is_shadow(pt)) {
-	  Printv(nativecall, arg, "._self", 0);
+	  Printv(nativecall, arg, ".getCPtr()", 0);
     } else Printv(nativecall, arg, 0);
 
     /* Get the java type of the parameter */
@@ -1410,7 +1389,7 @@ void JAVA::cpp_constructor(char *name, char *iname, ParmList *l) {
   Printf(f_shadow, ") {\n");
   Printv(nativecall,
 	 ");\n",
-	 tab8, " _selfown = true;\n",
+	 tab8, " _cMemOwn = true;\n",
 	 "    }\n",
 	 0);
 
@@ -1427,18 +1406,16 @@ void JAVA::cpp_destructor(char *name, char *newname) {
 
   char *realname = (newname) ? newname : name;
 
-  if(finalize) {
+  if(!nofinalize) {
     Printf(f_shadow, "  protected void finalize() {\n");
-    Printf(f_shadow, "    if(_selfown) {\n");
-    Printf(f_shadow, "      _delete();\n");
-    Printf(f_shadow, "    }\n");
+    Printf(f_shadow, "    _delete();\n");
     Printf(f_shadow, "  };\n\n");
   }
 
-  Printf(f_shadow, "  public void _delete() {\n");
-  Printf(f_shadow, "    if(_self != 0 && %s.class == _selfClass()) {\n", shadow_classname);
-  Printf(f_shadow, "\t%s.%s(_self);\n", module, Swig_name_destroy(realname));
-  Printf(f_shadow, "\t_self = 0;\n");
+  Printf(f_shadow, "  synchronized public void _delete() {\n");
+  Printf(f_shadow, "    if(_cPtr != 0 && _cMemOwn) {\n", shadow_classname);
+  Printf(f_shadow, "\t%s.%s(_cPtr);\n", module, Swig_name_destroy(realname));
+  Printf(f_shadow, "\t_cPtr = 0;\n");
   Printf(f_shadow, "    }\n");
   Printf(f_shadow, "  }\n\n");
 }
@@ -1458,19 +1435,6 @@ void JAVA::cpp_class_decl(char *name, char *rename, char *type) {
       Delete(stype);
     }
   }
-/*
-  this->Language::cpp_class_decl(name,rename, type);
-  if(!shadow) return;
-
-  char *realname = (rename) ? rename : name;
-
-printf("cpp_class_decl: %s %s\n",name,realname);
-  Setattr(shadow_classes,name, realname);
-  if(type && strcmp(type, "struct") == 0) {
-    sprintf(bigbuf, "struct %s", name);
-    Setattr(shadow_classes, bigbuf, rename);
-  }
-*/
 }
 
 void JAVA::cpp_inherit(char **baseclass, int) {
